# RP2040-Controller-Peripheral-SPI

./: README.md
CONTROLLER_g/: CMakeLists.txt  main.c
PERIPHERAL_g/: CMakeLists.txt  main.c
